--- a/css/upcasteeq.css
+++ b/css/upcasteeq.css
@@ -9,6 +9,7 @@
 .UPCasteEq_wrapper input {
   width: 100%;
   height: 29px;
+  font-family: "Georama", sans-serif;
 }
 .UPCasteEq_wrapper .row {
   margin-bottom: 10px;
@@ -120,6 +121,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   margin-top: -100px;
+  width: 80%;
 }
 
 .UPCasteEq_model_blackout {
@@ -134,6 +136,20 @@
   margin-top: -100px;
   width: 100%;
   height: 100%;
+}
+
+.methodology {
+  width: 100%;
+}
+.methodology h2 {
+  margin-bottom: 15px;
+}
+
+.methodology p {
+  font-size: 12px;
+  line-height: 16px;
+  font-family: "Georama", sans-serif;
+  margin-bottom: 15px;
 }
 
 /* background-color: rgba(0, 0, 0, 0.6); */
