--- a/css/upcasteeq.css
+++ b/css/upcasteeq.css
@@ -101,7 +101,8 @@
   margin-bottom: 5px;
 }
 
-.UPCasteEq_buttons button {
+.UPCasteEq_buttons button,
+#closeModel2 {
   font-family: "Georama", sans-serif;
   text-transform: uppercase;
   color: #fff;
@@ -120,7 +121,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  margin-top: -100px;
+  /* margin-top: -100px; */
   width: 80%;
 }
 
@@ -133,19 +134,19 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  margin-top: -100px;
+  /* margin-top: -100px; */
   width: 100%;
   height: 100%;
 }
 
-.methodology {
+#methodology {
   width: 100%;
 }
-.methodology h2 {
+#methodology h2 {
   margin-bottom: 15px;
 }
 
-.methodology p {
+#methodology p {
   font-size: 12px;
   line-height: 16px;
   font-family: "Georama", sans-serif;
@@ -162,4 +163,67 @@
   display: block;
 }
 
-/* background-color: rgba(0, 0, 0, 0.6); */
+#closeModel {
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: #000;
+  color: #fff;
+  outline: none;
+  border: none;
+}
+
+.result_header,
+.result_header .div,
+.result_body {
+  display: flex;
+  justify-content: center;
+  column-gap: 10px;
+}
+.result_header .div span,
+.result_body #userPrediction,
+.result_body #modelPrediction {
+  display: block;
+}
+.result_body div:first-child {
+  color: #bf6c1e;
+}
+#chosenConst,
+#chosenParty,
+#chosenCaste {
+  font-size: 13px;
+  line-height: 15px;
+  display: inline-block;
+}
+.result_body #userPrediction,
+.result_body #modelPrediction {
+  font-size: 28px;
+  font-weight: 700;
+}
+.result_body div:last-child {
+  color: #56b635;
+}
+.result_body {
+  margin-bottom: 15px;
+}
+.result_body div b {
+  font-size: 12px;
+  display: inline-block;
+  line-height: 14px;
+  margin-bottom: 10px;
+}
+.result_header div b {
+  font-size: 12px;
+  display: inline-block;
+  line-height: 14px;
+  margin-bottom: 5px;
+}
+
+.result_header {
+  margin: 10px 0;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #000;
+}
